<resources>
    <string name="app_name">Basketball Scorekeeper</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="add3">+ 3-Point Shot</string>
    <string name="threePointShots">3-Point Shots: </string>
    <string name="add2">+ 2-Point Shot</string>
    <string name="twoPointShots">2-Point Shots: </string>
    <string name="addFree">+ Free Throw</string>
    <string name="freeThrows">Free Throws: </string>
    <string name="addFoul">Foul</string>
    <string name="fouls">Fouls: </string>
    <string name="reset">Reset</string>
</resources>
