<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical"
    android:paddingTop="@dimen/textview_padding"
    tools:context="android.example.com.courtcounter.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/textview_padding"
                android:text="@string/teamA"
                android:id="@+id/textView2" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/textview_padding"
                android:text="0"
                android:textSize="@dimen/text_size_score" />


            <TableLayout
                android:id="@+id/detailsA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp">

                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:padding="@dimen/textview_padding"
                        android:text="@string/threePointShots"
                        android:textSize="@dimen/table_text_size" />

                    <TextView
                        android:id="@+id/team_a_triples"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="@dimen/textview_padding"
                        android:text="0"
                        android:textSize="@dimen/table_text_size" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:padding="@dimen/textview_padding"
                        android:text="@string/twoPointShots"
                        android:textSize="@dimen/table_text_size" />

                    <TextView
                        android:id="@+id/team_a_doubles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="@dimen/textview_padding"
                        android:text="0"
                        android:textSize="@dimen/table_text_size" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:padding="@dimen/textview_padding"
                        android:text="@string/freeThrows"
                        android:textSize="@dimen/table_text_size" />

                    <TextView
                        android:id="@+id/team_a_singles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="@dimen/textview_padding"
                        android:text="0"
                        android:textSize="@dimen/table_text_size" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:padding="@dimen/textview_padding"
                        android:text="@string/fouls"
                        android:textSize="@dimen/table_text_size" />

                    <TextView
                        android:id="@+id/team_a_fouls"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="@dimen/textview_padding"
                        android:text="0"
                        android:textSize="@dimen/table_text_size" />
                </TableRow>

            </TableLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/row_margin"
                android:onClick="addScore"
                android:tag="TeamA,3"
                android:text="@string/add3" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/row_margin"
                android:onClick="addScore"
                android:tag="TeamA,2"
                android:text="@string/add2" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/row_margin"
                android:onClick="addScore"
                android:tag="TeamA,1"
                android:text="Free throw" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/row_margin"
                android:onClick="addFoul"
                android:tag="TeamA"
                android:text="@string/addFoul" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/textview_padding"
                android:text="@string/teamB" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/textview_padding"
                android:text="0"
                android:textSize="@dimen/text_size_score" />

            <TableLayout
                android:id="@+id/detailsB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp">

                <TableRow>

                    <TextView
                        android:layout_column="1"
                        android:padding="@dimen/textview_padding"
                        android:text="@string/threePointShots"
                        android:textSize="@dimen/table_text_size"
                        android:id="@+id/textView" />

                    <TextView
                        android:id="@+id/team_b_triples"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="@dimen/textview_padding"
                        android:text="0"
                        android:textSize="@dimen/table_text_size" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:padding="@dimen/textview_padding"
                        android:text="@string/twoPointShots"
                        android:textSize="@dimen/table_text_size" />

                    <TextView
                        android:id="@+id/team_b_doubles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="@dimen/textview_padding"
                        android:text="0"
                        android:textSize="@dimen/table_text_size" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_column="1"
                        android:padding="@dimen/textview_padding"
                        android:text="@string/freeThrows"
                        android:textSize="@dimen/table_text_size"
                        android:id="@+id/textView3" />

                    <TextView
                        android:id="@+id/team_b_singles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="@dimen/textview_padding"
                        android:text="0"
                        android:textSize="@dimen/table_text_size" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:padding="@dimen/textview_padding"
                        android:text="@string/fouls"
                        android:textSize="@dimen/table_text_size" />

                    <TextView
                        android:id="@+id/team_b_fouls"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="@dimen/textview_padding"
                        android:text="0"
                        android:textSize="@dimen/table_text_size" />
                </TableRow>

            </TableLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/row_margin"
                android:onClick="addScore"
                android:tag="TeamB,3"
                android:text="@string/add3" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/row_margin"
                android:onClick="addScore"
                android:tag="TeamB,2"
                android:text="@string/add2" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/row_margin"
                android:onClick="addScore"
                android:tag="TeamB,1"
                android:text="Free throw" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/row_margin"
                android:onClick="addFoul"
                android:tag="TeamB"
                android:text="@string/addFoul" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="reset"
        android:text="@string/reset" />

</LinearLayout>
